[gd_scene load_steps=43 format=3 uid="uid://cbdl273vv8r6h"]

[ext_resource type="Script" path="res://scenes/oldplayer/player.gd" id="1_q2lbp"]
[ext_resource type="Texture2D" uid="uid://b77qf0os2s881" path="res://scenes/oldplayer/fall.PNG" id="2_hta83"]
[ext_resource type="Texture2D" uid="uid://cdokent7n3pk6" path="res://scenes/oldplayer/jump.PNG" id="4_ajye3"]
[ext_resource type="Texture2D" uid="uid://dt3hj0ruv44rq" path="res://scenes/oldplayer/idle2.PNG" id="4_ay2i3"]
[ext_resource type="Texture2D" uid="uid://cf8oylx7htyoe" path="res://scenes/oldplayer/atk.png" id="5_cccc7"]
[ext_resource type="Texture2D" uid="uid://dk04exllwdoad" path="res://scenes/oldplayer/walk1.PNG" id="5_q0mpm"]
[ext_resource type="Texture2D" uid="uid://c44qac5j8g50d" path="res://scenes/oldplayer/walk2.PNG" id="6_8ntje"]
[ext_resource type="Texture2D" uid="uid://bulk0rvskyino" path="res://scenes/oldplayer/atk2.png" id="6_ywkql"]
[ext_resource type="Texture2D" uid="uid://b011kgo8fllbo" path="res://scenes/oldplayer/atk3.png" id="7_crprd"]
[ext_resource type="Texture2D" uid="uid://buhtjqim26m31" path="res://scenes/oldplayer/walk3.PNG" id="7_n87aa"]
[ext_resource type="Texture2D" uid="uid://t33xp7s1x5dr" path="res://scenes/oldplayer/atkair.PNG" id="8_as2ev"]
[ext_resource type="Texture2D" uid="uid://b1b1si0ii4hx4" path="res://scenes/oldplayer/walk4.PNG" id="8_mcaag"]
[ext_resource type="Texture2D" uid="uid://b8hi2a67coamh" path="res://scenes/oldplayer/atk4.png" id="8_rp8oo"]
[ext_resource type="AudioStream" uid="uid://cblwqqwnmje4t" path="res://scenes/oldplayer/stip.mp3" id="9_6783a"]
[ext_resource type="Texture2D" uid="uid://bmfrvpgp5iiuj" path="res://scenes/oldplayer/atkair2.PNG" id="9_gk2v4"]
[ext_resource type="Texture2D" uid="uid://bk10odjvohors" path="res://scenes/oldplayer/atk5.png" id="9_pw0ym"]
[ext_resource type="AudioStream" uid="uid://it8k51wjwwhj" path="res://scenes/oldplayer/step.mp3" id="10_f747g"]
[ext_resource type="Texture2D" uid="uid://dv62ty5u3lwfg" path="res://scenes/oldplayer/atkair3.PNG" id="10_l6156"]
[ext_resource type="Texture2D" uid="uid://ugaus262pdkv" path="res://scenes/oldplayer/atkair4.PNG" id="11_i0kli"]
[ext_resource type="AudioStream" uid="uid://cixs3u6hev3gs" path="res://scenes/oldplayer/jump.mp3" id="11_ytca0"]
[ext_resource type="Texture2D" uid="uid://8rbt40g0b8pl" path="res://scenes/oldplayer/dead.PNG" id="12_d1b0a"]
[ext_resource type="Texture2D" uid="uid://bmnpxli88ymmw" path="res://scenes/oldplayer/atkair5.PNG" id="12_ht0vc"]
[ext_resource type="AudioStream" uid="uid://db4sdh4sc8cy7" path="res://scenes/oldplayer/land.mp3" id="12_l4mbk"]
[ext_resource type="Texture2D" uid="uid://dt5a32o3f3vng" path="res://scenes/oldplayer/stunned1.PNG" id="13_rg4pr"]
[ext_resource type="Texture2D" uid="uid://m5b8hd81gdsy" path="res://scenes/oldplayer/stunned2.PNG" id="14_7fptw"]
[ext_resource type="Texture2D" uid="uid://duifbj7njdodo" path="res://scenes/oldplayer/spawn1.PNG" id="18_2lv3f"]
[ext_resource type="Texture2D" uid="uid://cr3dtabnhfg3n" path="res://scenes/oldplayer/onwall1.PNG" id="18_v0x74"]
[ext_resource type="Texture2D" uid="uid://wd44oxdke8c5" path="res://scenes/oldplayer/spawn2.PNG" id="19_8jkpy"]
[ext_resource type="AudioStream" uid="uid://crgfvkfi2hu83" path="res://scenes/oldplayer/snd_smallswing.wav" id="19_mntsf"]
[ext_resource type="Texture2D" uid="uid://r80a2e4kt5ch" path="res://scenes/oldplayer/onwall2.PNG" id="19_xyehu"]
[ext_resource type="Texture2D" uid="uid://ucnnxa5xfwpq" path="res://scenes/oldplayer/spawn3.PNG" id="20_ead8a"]
[ext_resource type="Texture2D" uid="uid://b41bjgpikt4xg" path="res://scenes/oldplayer/spawn4.PNG" id="21_q014d"]
[ext_resource type="Texture2D" uid="uid://bdy38x56seyfl" path="res://scenes/oldplayer/spawn5.PNG" id="22_f8n2x"]
[ext_resource type="Texture2D" uid="uid://moryugtatkef" path="res://scenes/oldplayer/spawn6.PNG" id="23_me0bv"]
[ext_resource type="Texture2D" uid="uid://c41qa0o67yevr" path="res://scenes/oldplayer/spawn7.PNG" id="24_irfrm"]
[ext_resource type="Texture2D" uid="uid://dg5ybf1wmrgvo" path="res://scenes/oldplayer/spawn8.PNG" id="25_1ub7q"]
[ext_resource type="AudioStream" uid="uid://cx15c4w4n2xfk" path="res://scenes/oldplayer/gothit3.mp3" id="26_dlpw8"]

[sub_resource type="CapsuleShape2D" id="1"]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 0.7,
"texture": ExtResource("5_cccc7")
}, {
"duration": 0.7,
"texture": ExtResource("6_ywkql")
}, {
"duration": 1.0,
"texture": ExtResource("7_crprd")
}, {
"duration": 1.1,
"texture": ExtResource("8_rp8oo")
}, {
"duration": 1.0,
"texture": ExtResource("9_pw0ym")
}],
"loop": true,
"name": &"atk",
"speed": 1.0
}, {
"frames": [{
"duration": 0.7,
"texture": ExtResource("8_as2ev")
}, {
"duration": 0.7,
"texture": ExtResource("9_gk2v4")
}, {
"duration": 1.0,
"texture": ExtResource("10_l6156")
}, {
"duration": 1.1,
"texture": ExtResource("11_i0kli")
}, {
"duration": 1.0,
"texture": ExtResource("12_ht0vc")
}],
"loop": false,
"name": &"atkair",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_d1b0a")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hta83")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_rg4pr")
}, {
"duration": 1.0,
"texture": ExtResource("14_7fptw")
}],
"loop": true,
"name": &"gothit",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ay2i3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ajye3")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_v0x74")
}, {
"duration": 1.0,
"texture": ExtResource("19_xyehu")
}],
"loop": true,
"name": &"onwall",
"speed": 3.0
}, {
"frames": [{
"duration": 60.0,
"texture": null
}, {
"duration": 1.0,
"texture": ExtResource("18_2lv3f")
}, {
"duration": 1.0,
"texture": ExtResource("19_8jkpy")
}, {
"duration": 1.0,
"texture": ExtResource("20_ead8a")
}, {
"duration": 1.0,
"texture": ExtResource("21_q014d")
}, {
"duration": 1.0,
"texture": ExtResource("22_f8n2x")
}, {
"duration": 1.0,
"texture": ExtResource("23_me0bv")
}, {
"duration": 1.0,
"texture": ExtResource("24_irfrm")
}, {
"duration": 1.0,
"texture": ExtResource("25_1ub7q")
}],
"loop": false,
"name": &"spawn",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_q0mpm")
}, {
"duration": 1.0,
"texture": ExtResource("8_mcaag")
}, {
"duration": 1.0,
"texture": ExtResource("7_n87aa")
}, {
"duration": 1.0,
"texture": ExtResource("6_8ntje")
}],
"loop": true,
"name": &"walk",
"speed": 1.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dlv81"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -12.24, 0)
emission_shape_scale = Vector3(15.61, 12.285, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
gravity = Vector3(0, 98, 0)
attractor_interaction_enabled = false
scale_min = 2.0
scale_max = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgyex"]
size = Vector2(14.95, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhnqn"]

[node name="kitting" type="CharacterBody2D"]
script = ExtResource("1_q2lbp")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -16.605)
scale = Vector2(0.35, 0.35)
enabled = false
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 6.5
drag_vertical_enabled = true
drag_vertical_offset = -0.69

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="vis" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -16)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("2")
animation = &"onwall"

[node name="sweat" type="GPUParticles2D" parent="vis"]
modulate = Color(0.4, 0.756863, 0.886275, 0.694118)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_dlv81")
lifetime = 0.65
interpolate = false
fract_delta = false

[node name="stip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6783a")
max_polyphony = 2

[node name="step" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_f747g")
max_polyphony = 2

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ytca0")
max_polyphony = 2

[node name="land" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_l4mbk")
max_polyphony = 2

[node name="atk" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_mntsf")

[node name="attackbox" type="Area2D" parent="."]
position = Vector2(14, 0)
monitorable = false

[node name="atkshape" type="CollisionShape2D" parent="attackbox"]
position = Vector2(-4.3125, 0)
scale = Vector2(2.5, 1)
shape = SubResource("RectangleShape2D_kgyex")

[node name="hitbox" type="Area2D" parent="."]
collision_priority = 0.0

[node name="hitshape" type="CollisionShape2D" parent="hitbox"]
scale = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_fhnqn")

[node name="hitsuccessful" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_dlpw8")

[node name="timerinv" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="timerstun" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="timerheal" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="timerinv" to="." method="_on_timerinv_timeout"]
[connection signal="timeout" from="timerstun" to="." method="_on_timerstun_timeout"]
[connection signal="timeout" from="timerheal" to="." method="_on_timerheal_timeout"]
